# TicTacToe-Cpp

./: CMakeLists.txt  Client.cpp  Client.h  GameBoard.h  GameSession.h  History.cpp  History.h  README.md  Server.cpp  app  main.cpp
includes/: Client.cpp  Client.h  GameBoard.cpp  GameBoard.h  GameSession.cpp  GameSession.h  Player.cpp  Player.h  Server.cpp  Server.h  TicTacToe.cpp  TicTacToe.h
logs/: game_history.txt  server_history.txt
